--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
 
 <body id="page-top" class="index">
 
-  {% include header.html %} {% include services.html %} {% include about.html %} {% include team.html %} {% include clients.html
-  %} {% include contact.html %} {% include footer.html %} {% include modals.html %} {% include js.html %}
+  {% include header.html %} {% include services.html %} {% include about.html %} {% include team.html %} {% include contact.html
+  %} {% include footer.html %} {% include modals.html %} {% include js.html %}
 
 </body>
 
