update about page to close off button vertical line

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -74,6 +74,13 @@
                             </div>
                         </div>
                     </li>
+                    <li class="timeline-inverted">
+                        <div class="timeline-image">
+                            <h4>Our
+                                <br>Journey
+                                <br>Begin!</h4>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
