--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,12 +17,11 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>2017</h4>
-                                <h4 class="subheading">SLIK</h4>
+                                <h4 class="subheading">Services</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                    totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et
-                                    ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">We started providing service that allow our customers to produce OJK XBRL complience report
+                                    without a need to manage or handle their own SIPP & SLIK application and maintenance.</p>
                             </div>
                         </div>
                     </li>
@@ -33,12 +32,11 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>March 2017</h4>
-                                <h4 class="subheading">SIPP</h4>
+                                <h4 class="subheading">SIPP & SLIK</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                    totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et
-                                    ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">Developed and launched our first product SIPP, which help Multi-Finacing company produced
+                                    OJK XBRL complience report.</p>
                             </div>
                         </div>
                     </li>
@@ -48,29 +46,13 @@
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>January 2017</h4>
-                                <h4 class="subheading">Full Fledge Team</h4>
-                            </div>
-                            <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                    totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et
-                                    ea quo dolore laudantium consectetur!</p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="timeline-inverted">
-                        <div class="timeline-image">
-                            <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                        </div>
-                        <div class="timeline-panel">
-                            <div class="timeline-heading">
                                 <h4>2016</h4>
                                 <h4 class="subheading">Let's Start</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente,
-                                    totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et
-                                    ea quo dolore laudantium consectetur!</p>
+                                <p class="text-muted">Started as a team of 4 people from various background, ranging from softwared developement,
+                                    consulting, financial and banking field, we aim to democratize IT Consulting specifically
+                                    XBRL related technology.</p>
                             </div>
                         </div>
                     </li>
