--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -236,9 +236,9 @@ fieldset[disabled] .btn-xl.active {
 
 @media(min-width:768px) {
     .navbar-default {
-        padding: 25px 0;
+        padding: 10px 0;
         border: 0;
-        background-color: transparent;
+        background-color: rgba(0, 0, 0, 0.3);
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
