--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -238,6 +238,7 @@ fieldset[disabled] .btn-xl.active {
     .navbar-default {
         padding: 10px 0;
         border: 0;
+        background: linear-gradient(0deg, rgba(0,0,0,0), rgba(0,0,0,0.3));
         background-color: rgba(0, 0, 0, 0.3);
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
